# Edemy

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp  moresuggestions.md  package-lock.json  package.json  sample.html  styles.old  suggestions.md  suggestions2.md  tsconfig.json  vscode-profile-2025-11-02-17-59-37.cpuprofile
backend/: CMakeLists.txt  vcpkg.json
backend/src/: FileProcessor.cpp  FileProcessor.h  Lesson.h  LessonDatabase.cpp  LessonDatabase.h  main.cpp
backend/src/resources/: ParallelCopy.hpp  ThreadPool.hpp
backend/tests/: test_parser.cpp
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: BrowseLessons.tsx  Home.tsx  LandingPage.tsx  LessonCard.css  LessonCard.tsx  Navbar.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/css/: Home.css  LessonCard.css  index.css
frontend/src/services/: apt.ts
frontend/src/styles/: themeStyles.ts
frontend/src/types/: Lesson.ts
src/: index.html  main.ts  renderer.ts
src/html/: home.html
src/ts/: home.ts  styles.ts
